CSS: fixed vertical align of minibar label in monthly/yearly report.

--- a/moneylog.css
+++ b/moneylog.css
@@ -419,6 +419,7 @@ tr.total {
 	float: left;
 	font-size: 75%;
 	color: white !important;
+	line-height: 14px;
 }
 
 /* ---------------------------------------------- Charts */
